Update and rename main.html to index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             }
         </style>
         <center>
-            <img src="C:\Users\saniaahmad\OneDrive\Documents\Mine\Photograpgh.jpeg" width="200" height="250" alt="Not found">
+            <img src="https://pluspng.com/img-png/png-user-icon-icons-logos-emojis-users-2400.png" width="200" height="250" alt="Not found">
             <h1>saniaahmad👤</h1>
             <a href="https://www.linkedin.com/in/sania-ahmad-b6a5b7224/">linkedin profile</a>
         </center>
