--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             </tbody>
         </table>
         <h3>
-            <a href="D:\webd\contacts.html"> Contact</a>
+            <a href="contacts.html"> Contact</a>
         </h3>
         
     </body>
