--- a/contacts.html
+++ b/contacts.html
@@ -11,7 +11,7 @@
         Contact Me
     </h2>
     <hr size="3" noshade>
-    <form class="" action="index.html" method="post" enctype="text/plain"> 
+    <form class="" action="index.html"  enctype="text/plain"> 
         <label>NAME:  </label>
         <input type="text" value="NAME" name="yourname"> <br>
         <label>Email id:  </label>
